# pythonPRJ

./: main.py  pyproject.toml
src/: test_cases.py
src/baseclasses/: global_enums.py
src/schemas/: schema.py
test/: test_1.py  test_cases.py
test/baseclasses/: __init__.py  global_enums.py  response.py
test/schemas/: __init__.py  schema.py
